--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,6 @@ body .botao__primary {
   background-color: red;
 }
 body .botao__primary--active {
-  background-color: blue;
+  background-color: purple;
 }
 
-/*# sourceMappingURL=main.css.map */
